[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "compoviz"
description = "Visualize Docker Compose Configuration"
readme = "README.md"
authors = [
    {name = "Vitaly Samigullin", email = "vrs@pilosus.org"},
]
dynamic = ["version"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
]
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6,<7",
    "Click>=8,<9",
    "networkx>=3,<4",
    "matplotlib>=3,<4",
]

[project.urls]
"Source code" = "https://github.com/pilosus/compoviz/"
"Issue tracker" = "https://github.com/pilosus/compoviz/issues"

[project.scripts]
compoviz = "compoviz.cli:cli"

[tool.setuptools_scm]
write_to = "_version.py"

[tool.isort]
atomic = true
line_length = 88
skip_gitignore = true
known_first_party = ["compoviz"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true

[tool.black]
target-version = ["py39", "py310", "py311", "py312", "py313"]
line-length = 88

[tool.coverage.report]
fail_under = 50

